# variable_base_factoradic_py

./: .gitignore  .pylintrc  LICENSE.txt  README.md  main.py  pyproject.toml  variable_base_factoradic.py
.github/workflows/: ci.yml
tests/: test_variable_base_factoradic.py
variable_base_factoradic/: __init__.py  variable_base_factoradic.py
