[tool.poetry]
name = "variable-base-factoradic"
version = "0.1.1"
description = ""
authors = ["Soeren Wegener <wegener92@gmail.com>"]
readme = "README.md"
packages = [{include = "variable_base_factoradic"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
