[tool.poetry]
name = "variable-base-factoradic"
version = "1.0.2"
description = "Python implementation of Randall Munroe's variable base factoradic number system: https://xkcd.com/2835/"
authors = ["Soeren Wegener <wegener92@gmail.com>"]
readme = "README.md"
packages = [{include = "variable_base_factoradic"}]
license = "MIT"
repository = "https://github.com/soerface/variable_base_factoradic_py"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pylint = "^2.17.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
